# attio-cli

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh
.github/workflows/: ci.yml  release.yml
src/: cache.rs  client.rs  main.rs  models.rs  tui.rs
src/models/: common.rs  config.rs  mod.rs  note.rs
