[package]
name = "attio"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
comfy-table = "7.1"
dirs = "6.0"
webbrowser = "1.0"
ratatui = "0.30"
crossterm = "0.29"
